--- a/index.html
+++ b/index.html
@@ -16,15 +16,11 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/leoiacovini/mygithubpage">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/leoiacovini">View on GitHub</a>
 
           <h1 id="project_title">Leonardo Iacovini</h1>
           <h2 id="project_tagline">My Page</h2>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/leoiacovini/mygithubpage/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/leoiacovini/mygithubpage/tarball/master">Download this project as a tar.gz file</a>
-            </section>
         </header>
     </div>
 
@@ -61,7 +57,6 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Leonardo Iacovini maintained by <a href="https://github.com/leoiacovini">leoiacovini</a></p>
         <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
